# hexdame

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  Makefile  README
docs/tex/: cite.bib  library.bib  report.tex
src/: .gitignore  CMakeLists.txt  abstractplayer.cpp  abstractplayer.h  app.cpp  app.h  appinfo.h.in  board.cpp  board.h  commondefs.h  hexdamegame.cpp  hexdamegame.h  hexdamegrid.cpp  hexdamegrid.h  hexdameview.cpp  hexdameview.h  hexgrid.cpp  hexgrid.h  humanplayer.cpp  humanplayer.h  main.cpp  player.h  randomplayer.cpp
src/player/: abstractplayer.cpp  abstractplayer.h  heuristic.cpp  heuristic.h  humanplayer.cpp  humanplayer.h  mtdfplayer.cpp  mtdfplayer.h  negamaxplayer.cpp  negamaxplayer.h  negamaxplayerwtt.cpp  negamaxplayerwtt.h  negamaxplayerwttmo.cpp  negamaxplayerwttmo.h  randomplayer.cpp  randomplayer.h
tools/share/cmake/: FindLog4Cxx.cmake
